--- a/app/src/main/res/layout/activity_cash_on_delivery_update.xml
+++ b/app/src/main/res/layout/activity_cash_on_delivery_update.xml
@@ -13,6 +13,7 @@
         android:ems="10"
         android:hint="House Address"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:ems="10"
         android:hint="Street"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +42,7 @@
         android:ems="10"
         android:hint="City"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +57,7 @@
         android:ems="10"
         android:hint="Phone Number"
         android:inputType="number"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +72,7 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +85,7 @@
         android:layout_width="136dp"
         android:layout_height="59dp"
         android:text="Update"
+        android:background="@drawable/border"
         app:backgroundTint="#E66C06"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
