--- a/app/src/main/res/layout/activity_cash_on_delivery_view_page.xml
+++ b/app/src/main/res/layout/activity_cash_on_delivery_view_page.xml
@@ -11,13 +11,13 @@
         android:layout_width="333dp"
         android:layout_height="50dp"
         android:layout_marginTop="91dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginRight="26dp"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/border"
+        android:gravity="fill_vertical"
         android:hint="House Address"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.807"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.247" />
@@ -27,9 +27,12 @@
         android:layout_width="333dp"
         android:layout_height="50dp"
         android:layout_marginBottom="19dp"
+        android:background="@drawable/border"
+        android:gravity="fill_vertical"
         android:hint="Street"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.444" />
@@ -38,13 +41,13 @@
         android:id="@+id/view3"
         android:layout_width="333dp"
         android:layout_height="50dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginLeft="9dp"
         android:layout_marginBottom="26dp"
+        android:background="@drawable/border"
+        android:gravity="fill_vertical"
         android:hint="City"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.477"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.538" />
@@ -53,15 +56,13 @@
         android:id="@+id/view4"
         android:layout_width="333dp"
         android:layout_height="50dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginLeft="9dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginRight="9dp"
         android:layout_marginBottom="17dp"
+        android:background="@drawable/border"
+        android:gravity="fill_vertical"
         android:hint="Phone Number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.623" />
@@ -70,10 +71,12 @@
         android:id="@+id/view5"
         android:layout_width="333dp"
         android:layout_height="50dp"
+        android:background="@drawable/border"
+        android:gravity="fill_vertical"
         android:hint="Email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.696" />
@@ -82,6 +85,7 @@
         android:id="@+id/editButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTintMode="screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.268"
@@ -94,6 +98,7 @@
         android:id="@+id/deleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTintMode="screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.654"
@@ -101,5 +106,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.865"
         app:srcCompat="@drawable/icons8_delete_bin_48" />
+
+    <ImageButton
+        android:id="@+id/imageButton6"
+        android:layout_width="55dp"
+        android:layout_height="49dp"
+        android:onClick="CashOnDeliveryViewPageToCashOnDeliverView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.118"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.219"
+        app:srcCompat="?attr/actionModeCloseDrawable" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
