--- a/app/src/main/res/layout/activity_delivery_home.xml
+++ b/app/src/main/res/layout/activity_delivery_home.xml
@@ -10,6 +10,7 @@
         android:id="@+id/codbutton"
         android:layout_width="174dp"
         android:layout_height="74dp"
+        android:onClick="HometoCOD"
         android:text="Cash On Delivery"
         app:backgroundTint="#4CAF50"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,6 +24,7 @@
         android:id="@+id/pagbutton2"
         android:layout_width="174dp"
         android:layout_height="74dp"
+        android:onClick="HometoPAG"
         android:text="Pick And Go"
         app:backgroundTint="#8BC34A"
         app:layout_constraintBottom_toBottomOf="parent"
