--- a/app/src/main/res/layout/activity_pick_and_go_update.xml
+++ b/app/src/main/res/layout/activity_pick_and_go_update.xml
@@ -13,6 +13,7 @@
         android:ems="10"
         android:hint="Pick Up Date"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
@@ -27,6 +28,7 @@
         android:ems="10"
         android:hint="Pick Up Time"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +43,7 @@
         android:ems="10"
         android:hint="Pick Up Location"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
@@ -56,6 +59,7 @@
         android:ems="10"
         android:hint="Phone Number"
         android:inputType="textPersonName"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +73,7 @@
         android:layout_height="59dp"
         android:text="Update"
         app:backgroundTint="#E66C06"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
