Commit Last heshan

--- a/app/src/main/res/layout/activity_cash_on_delivery_update.xml
+++ b/app/src/main/res/layout/activity_cash_on_delivery_update.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CashOnDeliveryUpdate">
+    tools:context=".Delivery.CashOnDeliveryUpdate">
     <EditText
         android:id="@+id/editHouse_Address"
         android:layout_width="333dp"
