--- a/app/src/main/res/layout/activity_pick_and_go_create.xml
+++ b/app/src/main/res/layout/activity_pick_and_go_create.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="CashOnDeliveryCreatePageToHome"
-    tools:context=".PickAndGoCreate">
+    tools:context=".Delivery.PickAndGoCreate">
 
     <EditText
         android:id="@+id/addDate"
