--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
 
         <TextView
             android:id="@+id/txtPrice"
-            android:text="DRINK LIST"
+            android:text="BEVARAGES"
             android:layout_gravity="center_vertical"
             android:textSize="30sp"
             android:textStyle="bold"
