--- a/app/src/main/res/layout/activity_payment1.xml
+++ b/app/src/main/res/layout/activity_payment1.xml
@@ -60,7 +60,6 @@
         android:layout_marginLeft="128dp"
         android:layout_marginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/tick2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
